--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <!-- Pizza Card Example -->
             <div class="col-lg-4 col-md-6 pizza-card">
                 <div class="card">
-                    <img src="task_2_images/4.png" class="card-img-top pizza-image" alt="Pizza">
+                    <img src="4.png" class="card-img-top pizza-image" alt="Pizza">
                     <div class="card-body">
                         <h5 class="card-title">Super Supreme</h5>
                         <p class="card-text">Topped with fresh vegetables, premium cheese, and spicy sausage.</p>
@@ -187,7 +187,7 @@
             <!-- Repeat Pizza Cards for more pizzas -->
             <div class="col-lg-4 col-md-6 pizza-card">
                 <div class="card">
-                    <img src="task_2_images/5.png" class="card-img-top pizza-image" alt="Pizza">
+                    <img src="5.png" class="card-img-top pizza-image" alt="Pizza">
                     <div class="card-body">
                         <h5 class="card-title">Classic Pepperoni</h5>
                         <p class="card-text">Loaded with spicy pepperoni and mozzarella cheese.</p>
@@ -229,7 +229,7 @@
 
             <div class="col-lg-4 col-md-6 pizza-card">
                 <div class="card">
-                    <img src="task_2_images/6.png" class="card-img-top pizza-image" alt="Pizza">
+                    <img src="6.png" class="card-img-top pizza-image" alt="Pizza">
                     <div class="card-body">
                         <h5 class="card-title">BBQ Chicken</h5>
                         <p class="card-text">Savory BBQ chicken with onions and cilantro.</p>
